# allpix-squared

./: CMakeLists.txt
cmake/: CPackConfig.cmake
examples/magnetic_field/: magnetic_field.py
src/core/: CMakeLists.txt
src/core/config/: ConfigManager.cpp  ConfigManager.hpp
src/core/geometry/: DetectorModel.cpp  DetectorModel.hpp  PixelDetectorModel.cpp  PixelDetectorModel.hpp
src/core/utils/: simulator.cpp  simulator.h
src/modules/ElectricFieldReader/: CMakeLists.txt  ElectricFieldReaderModule.cpp  ElectricFieldReaderModule.hpp  TensorMesh.cpp  TensorMesh.hpp
src/py/: CMakeLists.txt  allpix.cpp  allpix.h
src/test/: CMakeLists.txt  main.cpp
